--- a/ESSU/ESSU/Settings Window.resx
+++ b/ESSU/ESSU/Settings Window.resx
@@ -117,6 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="label2.Text" xml:space="preserve">
+    <value>If the people at the metroforsteam team wishes for me
+not to use their button assests they can contact me on 
+steam and tell me not to use them. Then the next major
+update will not contain any assests. Please keep in mind 
+I make no money on this project.</value>
+  </data>
   <metadata name="openFile.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
