--- a/ESSU/ESSU/Properties/Resources.resx
+++ b/ESSU/ESSU/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="workshop" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\workshop.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="win32_win_restore" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\win32_win_restore.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="news" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\news.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -211,7 +214,7 @@
   <data name="workshop_p" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\workshop_p.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="win32_win_restore" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\win32_win_restore.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="cover" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
